fix bug foto and modifikasi dan menambah fitur menu login

--- a/projek_sekolahSD_kerkom/admin.html
+++ b/projek_sekolahSD_kerkom/admin.html
@@ -32,7 +32,7 @@
         <a class="navbar-brand d-flex align-items-center" href="admin.html">
           <img
             class="foto-sd me-2"
-            src="/assets/images/logo.png"
+            src="assets/images/logo.png"
             alt="SD"
             height="40"
           />
@@ -115,7 +115,7 @@
                 </li>
                 <li><hr class="dropdown-divider" /></li>
                 <li>
-                  <a class="dropdown-item text-danger" href="index.html"
+                  <a class="dropdown-item text-danger" href="login.html"
                     ><i class="fas fa-sign-out-alt"></i> Logout</a
                   >
                 </li>
