--- a/projek_sekolahSD_kerkom/guru.html
+++ b/projek_sekolahSD_kerkom/guru.html
@@ -51,7 +51,7 @@
         <a class="navbar-brand d-flex align-items-center" href="admin.html">
           <img
             class="foto-sd me-2"
-            src="/assets/images/logo.png"
+            src="assets/images/logo.png"
             alt="SD"
             height="40"
           />
