--- a/projek_sekolahSD_kerkom/profile.html
+++ b/projek_sekolahSD_kerkom/profile.html
@@ -44,7 +44,7 @@
     <nav class="navbar navbar-expand-lg bg-nav navbar-dark text-white shadow">
         <div class="container-fluid">
         <a class="navbar-brand d-flex align-items-center" href="admin.html">
-            <img class="foto-sd me-2" src="/assets/images/logo.png" alt="SD" height="40">
+            <img class="foto-sd me-2" src="assets/images/logo.png" alt="SD" height="40">
             SD Nusantara
         </a>
         
@@ -123,7 +123,7 @@
         <div class="col-md-4 mb-4">
             <div class="card profile-card shadow">
             <div class="card-body text-center position-relative">
-                <img src="/assets/images/admin.jpg" alt="Foto Profil" class="profile-picture rounded-circle mb-3">
+                <img src="assets/images/admin.jpg" alt="Foto Profil" class="profile-picture rounded-circle mb-3">
                 <h4 id="profile-name">Nandika Dwi A</h4>
                 <p class="text-muted mb-2">Administrator</p>
                 <p class="text-muted">
