--- a/projek_sekolahSD_kerkom/admin.html
+++ b/projek_sekolahSD_kerkom/admin.html
@@ -12,7 +12,7 @@
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css"
     />
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
+    
     <style>
       .active {
         font-weight: bold;
@@ -180,62 +180,55 @@
       </div>
     </div>
 
-    <!-- Tambahkan setelah Quick Actions -->
+    <!-- kotak penghitung data jumlah keseluruhan -->
     <div class="row mb-4">
       <div class="col-md-3 mb-3">
         <div class="card text-white bg-primary h-100">
-          <div class="card-body">
-            <div class="d-flex justify-content-between">
-              <div>
-                <h4>156</h4>
-                <p>Total Siswa</p>
-              </div>
-              <i class="fas fa-users fa-2x"></i>
+          <div class="card-body d-flex justify-content-between align-items-center">
+            <div>
+              <h4 id="total-siswa">0</h4>
+              <p>Total Siswa</p>
             </div>
+            <i class="fas fa-users fa-2x"></i>
           </div>
         </div>
       </div>
       <div class="col-md-3 mb-3">
         <div class="card text-white bg-success h-100">
-          <div class="card-body">
-            <div class="d-flex justify-content-between">
-              <div>
-                <h4>12</h4>
-                <p>Total Guru</p>
-              </div>
-              <i class="fas fa-chalkboard-teacher fa-2x"></i>
+          <div class="card-body d-flex justify-content-between align-items-center">
+            <div>
+              <h4 id="total-guru">0</h4>
+              <p>Total Guru</p>
             </div>
+            <i class="fas fa-chalkboard-teacher fa-2x"></i>
           </div>
         </div>
       </div>
       <div class="col-md-3 mb-3">
         <div class="card text-white bg-warning h-100">
-          <div class="card-body">
-            <div class="d-flex justify-content-between">
-              <div>
-                <h4>6</h4>
-                <p>Kelas</p>
-              </div>
-              <i class="fas fa-school fa-2x"></i>
+          <div class="card-body d-flex justify-content-between align-items-center">
+            <div>
+              <h4 id="total-kelas">0</h4>
+              <p>Kelas</p>
             </div>
+            <i class="fas fa-school fa-2x"></i>
           </div>
         </div>
       </div>
       <div class="col-md-3 mb-3">
         <div class="card text-white bg-info h-100">
-          <div class="card-body">
-            <div class="d-flex justify-content-between">
-              <div>
-                <h4>5</h4>
-                <p>Pengumuman Aktif</p>
-              </div>
-              <i class="fas fa-bullhorn fa-2x"></i>
+          <div class="card-body d-flex justify-content-between align-items-center">
+            <div>
+              <h4 id="total-pengumuman">0</h4>
+              <p>Pengumuman Aktif</p>
             </div>
+            <i class="fas fa-bullhorn fa-2x"></i>
           </div>
         </div>
       </div>
     </div>
-
+  </div>
+<!--riwayat aktivitas dan pengumuman aktivitas-->
     <div class="row">
       <div class="col-md-6 mb-4">
         <div class="card">
@@ -245,16 +238,16 @@
             </h5>
           </div>
           <div class="card-body">
-            <ul class="list-group list-group-flush">
-              <li class="list-group-item">
+            <ul  id="activity-list" class="list-group list-group-flush">
+              <li class="list-group list-group-flush">
                 <small class="text-muted">Hari ini, 10:30</small><br />
                 Data siswa baru ditambahkan - Kelas 1
               </li>
-              <li class="list-group-item">
+              <li class="list-group list-group-flush">
                 <small class="text-muted">Kemarin, 14:15</small><br />
                 Pengumuman baru diterbitkan
               </li>
-              <li class="list-group-item">
+              <li class="list-group list-group-flush">
                 <small class="text-muted">2 hari lalu</small><br />
                 Update jadwal pelajaran
               </li>
@@ -410,6 +403,7 @@
         }
       });
     </script>
+     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
     <script src="dist/js/navigation.js"></script>
     <script src="dist/js/storage.js"></script>
     <script src="dist/js/dashboard.js"></script>
