--- a/website-sekolahSD-main/guru.html
+++ b/website-sekolahSD-main/guru.html
@@ -49,7 +49,7 @@
 
       /* Judul modal */
       .modal-title {
-        color: #333;
+        color: #ede5e5;
         font-weight: 600;
       }
 
@@ -149,7 +149,7 @@
         </button>
 
         <!-- Menu Navigasi -->
-        <div class="collapse navbar-collapse" id="mainNavbar">
+        <div class="collapse navbar-collapse justify-content-between w-100" id="mainNavbar">
           <ul class="navbar-nav me-auto">
             <!-- Dashboard -->
             <li class="nav-item">
@@ -164,35 +164,16 @@
                 <i class="fas fa-chalkboard-teacher"></i> Data Guru
               </a>
             </li>
-
-            <!-- Dropdown Kelas -->
-            <li class="nav-item dropdown">
-              <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown">
-                <i class="fas fa-users"></i> Data Kelas
-              </a>
-              <ul class="dropdown-menu">
-                <li><a class="dropdown-item" href="kelas1.html">Kelas 1</a></li>
-                <li><a class="dropdown-item" href="kelas2.html">Kelas 2</a></li>
-                <li><a class="dropdown-item" href="kelas3.html">Kelas 3</a></li>
-                <li><a class="dropdown-item" href="kelas4.html">Kelas 4</a></li>
-                <li><a class="dropdown-item" href="kelas5.html">Kelas 5</a></li>
-                <li><a class="dropdown-item" href="kelas6.html">Kelas 6</a></li>
-              </ul>
-            </li>
-
-            <!-- Pengumuman -->
+            <!-- Data Kelas -->
             <li class="nav-item">
-              <a class="nav-link" href="pengumuman.html">
-                <i class="fas fa-bullhorn"></i> Pengumuman
+              <a class="nav-link" href="kelas1.html" id="nav-guru">
+                <i class="fas fa-users"></i> Data siswa
               </a>
             </li>
 
-            <!-- Jadwal -->
-            <li class="nav-item">
-              <a class="nav-link" href="jadwal.html">
-                <i class="fas fa-calendar-alt"></i> Jadwal
-              </a>
-            </li>
+            
+
+           
           </ul>
 
           <!-- Menu kanan: Profil Admin -->
@@ -205,7 +186,7 @@
                 <li><a class="dropdown-item" href="profile.html"><i class="fas fa-user"></i> Profil Saya</a></li>
                 <li><a class="dropdown-item" href="settings.html"><i class="fas fa-cog"></i> Pengaturan</a></li>
                 <li><hr class="dropdown-divider" /></li>
-                <li><a class="dropdown-item text-danger" href="index.html"><i class="fas fa-sign-out-alt"></i> Logout</a></li>
+                <li><a class="dropdown-item text-danger" href="login.html"><i class="fas fa-sign-out-alt"></i> Logout</a></li>
               </ul>
             </li>
           </ul>
