update v 4 by alifi

--- a/website-sekolahSD-main/admin.html
+++ b/website-sekolahSD-main/admin.html
@@ -63,7 +63,7 @@
             </li>
             <li class="nav-item">
               <a class="nav-link" href="kelas1.html" id="nav-guru">
-                <i class="fas fa-users"></i> Data siswa
+                <i class="fas fa-users"></i> Daftar siswa
               </a>
             </li>
             </ul>
@@ -140,9 +140,9 @@
         <div class="col-md-3 mb-3">
           <div class="card text-center h-100">
             <div class="card-body">
-              <h5 class="card-title">Kelas 4-6</h5>
-              <p class="card-text">Data siswa kelas atas</p>
-              <a href="kelas4.html" class="btn btn-warning">Lihat</a>
+              <h5 class="card-title">Distribusi Siswa</h5>
+              <p class="card-text">Data perserta didik</p>
+              <a href="dataSiswa.html" class="btn btn-warning">Lihat</a>
             </div>
           </div>
         </div>
@@ -269,85 +269,15 @@
       </div>
     </div>
 
-    <div class="row mb-4">
-      <div class="col-12">
-        <div class="card">
-          <div class="card-header bg-dark text-white">
-            <h5 class="mb-0">
-              <i class="fas fa-calendar-day"></i> Jadwal Hari Ini
-            </h5>
-          </div>
-          <div class="card-body">
-            <div class="table-responsive">
-              <table class="table table-striped">
-                <thead>
-                  <tr>
-                    <th>Waktu</th>
-                    <th>Kelas 1</th>
-                    <th>Kelas 2</th>
-                    <th>Kelas 3</th>
-                    <th>Kelas 4</th>
-                    <th>Kelas 5</th>
-                    <th>Kelas 6</th>
-                  </tr>
-                </thead>
-                <tbody>
-                  <tr>
-                    <td>07:00-08:30</td>
-                    <td>Matematika</td>
-                    <td>Bahasa Indonesia</td>
-                    <td>IPA</td>
-                    <td>IPS</td>
-                    <td>Matematika</td>
-                    <td>Bahasa Inggris</td>
-                  </tr>
-                  <tr>
-                    <td>08:30-10:00</td>
-                    <td>Bahasa Indonesia</td>
-                    <td>Matematika</td>
-                    <td>Bahasa Indonesia</td>
-                    <td>Matematika</td>
-                    <td>IPA</td>
-                    <td>Matematika</td>
-                  </tr>
-                </tbody>
-              </table>
-            </div>
-            <a href="jadwal.html" class="btn btn-outline-primary btn-sm"
-              >Lihat Jadwal Lengkap</a
-            >
-          </div>
-        </div>
-      </div>
-    </div>
+   
 
-    <div class="row">
-      <div class="col-md-4 mb-4">
-        <div class="card">
-          <div class="card-header bg-dark text-white">
-            <h5 class="mb-0">
-              <i class="fas fa-chart-pie"></i> Distribusi Siswa
-            </h5>
-          </div>
-          <div class="card-body text-center">
-            <canvas id="studentChart" width="200" height="200"></canvas>
-            <div class="mt-2">
-              <span class="badge bg-primary">K1: 26</span>
-              <span class="badge bg-success">K2: 28</span>
-              <span class="badge bg-info">K3: 25</span>
-              <span class="badge bg-warning">K4: 27</span>
-              <span class="badge bg-danger">K5: 26</span>
-              <span class="badge bg-secondary">K6: 24</span>
-            </div>
-          </div>
-        </div>
-      </div>
-    </div>
+   
 
     <!-- Footer -->
     <footer class="bg-dark text-white text-center py-3 mt-5">
       <div class="container">
         <p>&copy; 2024 SD Nusantara. All rights reserved.</p>
+        <p class="mb-0">Jl. Pendidikan No. 123, Jakarta | Telp: (021) 123456</p>
       </div>
     </footer>
 
