--- a/website-sekolahSD-main/login.html
+++ b/website-sekolahSD-main/login.html
@@ -164,7 +164,7 @@
   <div class="main-container">
     <!-- Left Panel -->
     <div class="left-panel" data-aos="fade-right">
-      <h1>🌟 SD Nusantara batu</h1>
+      <h1>🌟 SD Nusantara</h1>
       <p>Login atau daftar untuk mengakses sistem akademik dan informasi sekolah.</p>
     </div>
 
